--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,7 +8,7 @@
 <body>
     <br>
     <%- include('../partials/header.ejs') %>
-    <%- include('../partials/errorMessage.ejs') %>
+    <%- include('../partials/errormessage.ejs') %>
     <%- body %>
 </body>
 </html>
