--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -8,4 +8,10 @@
 
 <% authors.forEach(author => { %>
     <div><%= author.name %></div>
+    <a href="/authors/<%= author.id %>">View</a>
+    <a href="/authors/<%= author.id %>/edit">Edit</a>
+    <%- include('../partials/delete_form', {url: `/authors/${author.id}`}) %>
+    <!-- <form method="POST" action="/authors/<%= author.id %>?_method=Edit">
+        <button type="submit">Edit</button>
+    </form> -->
 <% }) %>
