--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -13,13 +13,12 @@
 <br>
 
 <% authors.forEach(author => { %>
-    <div><%= author.name %></div>
-    <div class="btn-row">
-        <a class="btn btn-primary" href="/authors/<%= author.id %>">View</a>
-        <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
-        <%- include('../partials/delete_form', {url: `/authors/${author.id}`}) %>
+    <div class="author-row">
+        <div class="author-nale"><%= author.name %></div>
+        <div class="btn-row">
+            <a class="btn btn-primary" href="/authors/<%= author.id %>">View</a>
+            <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+            <%- include('../partials/delete_form', {url: `/authors/${author.id}`}) %>
+        </div>
     </div>
-    <!-- <form method="POST" action="/authors/<%= author.id %>?_method=Edit">
-        <button type="submit">Edit</button>
-    </form> -->
 <% }) %>
