--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,7 @@
 <h2 class="page-header">Recently Added</h2>
 <div>
-    <% books.forEach(book => { %>
-        <a href="/books/<%= book.id %>">
-            <img height="150" width="100" src="<%= book.coverImagePath %>">
-        </a>
-    <% }) %>
+    <%- include('partials/bookgrid.ejs', {
+        books: books,
+        large: true
+    }) %>
 </div>
